k8s/_k8s_deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-feature-deploys-deployment
  namespace: k8s-feature-deploys
  labels:
    app: k8s-feature-deploys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-feature-deploys
  template:
    metadata:
      labels:
        app: k8s-feature-deploys
    spec:
      imagePullSecrets:
        - name: k8s-feature-deploys-secrets
      containers:
        - name: k8s-feature-deploys
          image: revenueoptimisation.azurecr.io/udf-api:2-78d33f8
          ports:
            - containerPort: 8000
