k8s/_k8s_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-feature-deploys-service
  namespace: k8s-feature-deploys
  labels:
    app: k8s-feature-deploys
spec:
  type: ClusterIP
  selector:
    app: k8s-feature-deploys
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
