k8s/_k8s_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-feature-deploys
  namespace: k8s-feature-deploys
  labels:
    app: k8s-feature-deploys
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: k8s-feature-deploys.dev.maersk-digital.net
      http:
        paths:
        - path: /
          backend:
            serviceName: k8s-feature-deploys-service
            servicePort: 8000
  tls:
  - hosts:
    - k8s-feature-deploys.dev.maersk-digital.net
    secretName: tls-wildcard-maersk-digital-net
